--- a/main.css
+++ b/main.css
@@ -125,7 +125,7 @@ nav{
   font-size: 15px;
 }
 footer.nb-footer {
-background: #222;
+background: #293339;
 border-top: 4px solid #b78c33; }
 footer.nb-footer .about {
 margin: 0 auto;
@@ -170,10 +170,11 @@ font-size: 13px;
 line-height: 20px;
 color: #aaa; }
 footer.nb-footer .copyright {
+font-weight: bolder;
 margin-top: 15px;
-background: #111;
+background: #37454d;
 padding: 7px 0;
-color: #999; }
+color: #fff; }
 footer.nb-footer .copyright p {
 margin: 0;
 padding: 0; }
