--- a/main.css
+++ b/main.css
@@ -1,7 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway:400,900,700,600,500,300,200,100,800);
-
-section{
-    padding:60px 0px;
+section {
+    padding: 60px 0px;
     font-family: 'Raleway', sans-serif;
 }
 
@@ -10,42 +9,42 @@ h2 {
     word-spacing: 5px;
     font-size: 30px;
     font-weight: 700;
-    margin-bottom:30px;
+    margin-bottom: 30px;
     font-family: 'Raleway', sans-serif;
 }
 
-p{
-    font-size:13px;
+p {
+    font-size: 13px;
 }
 
-.ion-minus{
-    padding:0px 10px;
+.ion-minus {
+    padding: 0px 10px;
 }
 
-#blog{
-	background-color:#fff;
+#blog {
+    background-color: #fff;
 }
 
 #blog .carousel-indicators {
     bottom: -60px;
 }
 
-#blog .carousel-indicators li{
+#blog .carousel-indicators li {
     background-color: #5db4c0;
     height: 13px;
     width: 13px;
     margin: 5px;
 }
 
-#blog .carousel-indicators li.active{
+#blog .carousel-indicators li.active {
     background-color: #888383;
 }
 
-#blog .card-block{
+#blog .card-block {
     padding: 10px;
 }
 
-#blog .card{
+#blog .card {
     background-color: #FFF;
     border: 1px solid #eceaea;
     margin: 20px 0px;
@@ -60,15 +59,18 @@ p{
     font-size: 13px;
     font-weight: 600;
 }
+
 * {
-  -webkit-border-radius: 1px !important;
-     -moz-border-radius: 1px !important;
-          border-radius: 1px !important;
+    -webkit-border-radius: 1px !important;
+    -moz-border-radius: 1px !important;
+    border-radius: 1px !important;
 }
+
 #logo {
-color: black;
-width:100%;
+    color: black;
+    width: 100%;
 }
+
 #logo h1 {
     font-size: 25px;
     text-shadow: 1px 2px 3px #999;
@@ -76,105 +78,129 @@ width:100%;
     font-weight: 700;
     letter-spacing: -1px;
 }
-#logo p{
-  padding-bottom: 20px;
-}
 
+#logo p {
+    padding-bottom: 20px;
+}
 
 #form-buscar >.form-group >.input-group > .form-control {
     height: 40px;
 }
 
-#form-buscar >.form-group >.input-group > .input-group-btn > .btn{
-        height: 40px;
-        font-size: 16px;
-        font-weight: 300;
-
-
-}
-#form-buscar >.form-group >.input-group > .input-group-btn > .btn .glyphicon{
- margin-right:12px;
+#form-buscar >.form-group >.input-group > .input-group-btn > .btn {
+    height: 40px;
+    font-size: 16px;
+    font-weight: 300;
 }
 
+#form-buscar >.form-group >.input-group > .input-group-btn > .btn .glyphicon {
+    margin-right: 12px;
+}
 
 #form-buscar >.form-group >.input-group > .form-control {
     font-size: 16px;
     font-weight: 300;
-
 }
 
 #form-buscar >.form-group >.input-group > .form-control:focus {
-  border-color: #33A444;
-  outline: 0.000002px dashed black;
-  outline-offset: -3px;
-  border: 1px #f1f1f1
-  outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 1px rgba(0, 109, 0, 0.8);
-          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 1px rgba(0, 109, 0, 0.8);
+    border-color: #33A444;
+    outline: 0.000002px dashed black;
+    outline-offset: -3px;
+    border: 1px #f1f1f1 outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 1px rgba(0, 109, 0, 0.8);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 1px rgba(0, 109, 0, 0.8);
 }
 
-nav{
-  background: #fff !important;
-  border:none !important;
+nav {
+    background: #fff !important;
+    border: none !important;
 }
-.h3{
-  font-size: 25px;
-  color: indigo;
+
+.h3 {
+    font-size: 25px;
+    color: indigo;
 }
-.paragraph{
-  font-size: 15px;
+
+.paragraph {
+    font-size: 15px;
 }
+
 footer.nb-footer {
-background: #293339;
-border-top: 4px solid #b78c33; }
+    background: #293339;
+    border-top: 4px solid #b78c33;
+}
+
 footer.nb-footer .about {
-margin: 0 auto;
-margin-top: 40px;
-max-width: 1170px;
-text-align: center; }
+    margin: 0 auto;
+    margin-top: 40px;
+    max-width: 1170px;
+    text-align: center;
+}
+
 footer.nb-footer .about p {
-font-size: 13px;
-color: #999;
-margin-top: 30px; }
+    font-size: 13px;
+    color: #999;
+    margin-top: 30px;
+}
+
 footer.nb-footer .about .social-media {
-margin-top: 15px; }
+    margin-top: 15px;
+}
+
 footer.nb-footer .about .social-media ul li a {
-display: inline-block;
-width: 45px;
-height: 45px;
-line-height: 45px;
-border-radius: 50%;
-font-size: 16px;
-color: #b78c33;
-border: 1px solid rgba(255, 255, 255, 0.3); }
+    display: inline-block;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    border-radius: 50%;
+    font-size: 16px;
+    color: #b78c33;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
 footer.nb-footer .about .social-media ul li a:hover {
-background: #b78c33;
-color: #fff;
-border-color: #b78c33; }
+    background: #b78c33;
+    color: #fff;
+    border-color: #b78c33;
+}
+
 footer.nb-footer .footer-info-single {
-margin-top: 30px; }
+    margin-top: 30px;
+}
+
 footer.nb-footer .footer-info-single .title {
-color: #aaa;
-text-transform: uppercase;
-font-size: 16px;
-border-left: 4px solid #b78c33;
-padding-left: 5px; }
+    color: #aaa;
+    text-transform: uppercase;
+    font-size: 16px;
+    border-left: 4px solid #b78c33;
+    padding-left: 5px;
+}
+
 footer.nb-footer .footer-info-single ul li a {
-display: block;
-color: #aaa;
-padding: 2px 0; }
+    display: block;
+    color: #aaa;
+    padding: 2px 0;
+}
+
 footer.nb-footer .footer-info-single ul li a:hover {
-color: #b78c33; }
+    color: #b78c33;
+}
+
 footer.nb-footer .footer-info-single p {
-font-size: 13px;
-line-height: 20px;
-color: #aaa; }
+    font-size: 13px;
+    line-height: 20px;
+    color: #aaa;
+}
+
 footer.nb-footer .copyright {
-font-weight: bolder;
-margin-top: 15px;
-background: #37454d;
-padding: 7px 0;
-color: #fff; }
+    font-weight: bolder;
+    margin-top: 15px;
+    background: #37454d;
+    padding: 7px 0;
+    color: #fff;
+}
+
 footer.nb-footer .copyright p {
-margin: 0;
-padding: 0; }
+    margin: 0;
+    padding: 0;
+}
